# open_oura

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/: README.md
crates/oura-analysis/: Cargo.toml
crates/oura-analysis/src/: hrv.rs  lib.rs  metabolic.rs  spo2.rs
crates/oura-cli/: Cargo.toml
crates/oura-cli/src/: game.rs  main.rs  motion_server.rs  viz.rs
crates/oura-core/src/: client.rs  events.rs
crates/oura-link/: Cargo.toml
crates/oura-link/src/: ble.rs  client.rs  error.rs  lib.rs
crates/oura-protocol/: Cargo.toml
crates/oura-protocol/src/: auth.rs  device.rs  events.rs  lib.rs  protocol.rs
crates/oura-store/: Cargo.toml
crates/oura-store/src/: error.rs  lib.rs  storage.rs
docs/: architecture.md  data-recovery-map.md  firmware-update.md  native-decoder.md  ring-5-research-plan.md
docs/algorithms/: README.md  unvalidated-events.md
tools/: ble_scan.py  ble_services.py  oura_firmware_download.py
