[workspace]
resolver = "2"
members = [
    "crates/oura-protocol",
    "crates/oura-link",
    "crates/oura-analysis",
    "crates/oura-store",
    "crates/oura-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Th0rgal/open_oura"

[profile.release]
lto = true
strip = true
