[package]
name = "oura-analysis"
description = "On-device metric algorithms ported from Oura's ecore engine (scores, sleep, baselines)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
oura-protocol = { path = "../oura-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
