[package]
name = "oura-protocol"
description = "Oura ring BLE wire protocol and event-body decoders (pure, no I/O)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hex = "0.4"
uuid = "1"
aes = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
