[package]
name = "oura-store"
description = "SQLite persistence for Oura ring events, samples, metrics and sync state"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
oura-protocol = { path = "../oura-protocol" }
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1"
thiserror = "1"
